--- a/src/shared/components/loading/Loading.module.css
+++ b/src/shared/components/loading/Loading.module.css
@@ -10,6 +10,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
+  z-index: 1;
   background-color: rgba(var(--loading-bg-color), .9);
   transition: var(--transition);
 }
