--- a/src/shared/components/set-theme/SetTheme.module.css
+++ b/src/shared/components/set-theme/SetTheme.module.css
@@ -12,10 +12,6 @@
   background-color: var(--color-white);
 }
 
-.button-light:hover {
-  color: inherit;
-}
-
 @media (hover: hover) {
   .button:hover {
     position: relative;
